--- a/comments.html
+++ b/comments.html
@@ -9,7 +9,9 @@
 <body>
     <nav class="navigation">
         <div class="container">
-            Nawigejszyn
+            <a href="index.html" class="nav-item">Strona główna</a>
+            <a href="post.html" class="nav-item">Posty</a>
+            <a href="galeria.html" class="nav-item">Galeria</a>
         </div>
     </nav>
     <main class="container">
