--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Spotkanie 1 - Strona Szymona</title>
 </head>
 <body>
-    <nav class="navigation">meni</nav>
+    <nav class="navigation">
+        <div class="container">
+            <a href="post.html" class="nav-item">Posty</a>
+            <a href="comments.html" class="nav-item">Komentarze</a>
+            <a href="galeria.html" class="nav-item">Galeria</a>
+        </div>
+    </nav>
     <main class="container">
         <h1 class="title">Strona Szymona</h1>
         <hr>
