--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/styl.css">
     <meta charset="UTF-8">
-    <title>Spotkanie 1 - Strona Szymona</title>
+    <title>Galeria</title>
 </head>
 <body>
     <nav class="navigation">
@@ -14,7 +14,7 @@
         </div>
     </nav>
     <main class="container">
-        <h1 class="title">Strona Szymona</h1>
+        <h1 class="title">Galeria</h1>
         <hr>
         <a class="img-link" href="zdjecia/siuuu.jpg" target="_blank">
             <img src="zdjecia/siuuu.jpg" alt="siuuu">
