--- a/ranking.html
+++ b/ranking.html
@@ -2,20 +2,21 @@
 <html lang="pl">
 <head>
     <link rel="stylesheet" href="css/styl.css">
+    <link rel="stylesheet" href="css/ranking.css">
     <meta charset="UTF-8">
     <title>Spotkanie 1 - Strona Szymona</title>
 </head>
 <body>
     <nav class="navigation">
         <div class="container">
+            <a href="index.html" class="nav-item">Strona główna</a>
             <a href="post.html" class="nav-item">Posty</a>
             <a href="comments.html" class="nav-item">Komentarze</a>
             <a href="galeria.html" class="nav-item">Galeria</a>
-            <a href="ranking.html" class="nav-item">Ranking</a>
         </div>
     </nav>
     <main class="container">
-        <h1 class="title">Strona Szymona</h1>
+        <h1 class="title">Rankingi</h1>
         <hr>
         <div>
             <h2 class="subtitle">O mnie</h2>
@@ -28,6 +29,36 @@
             <p>
                 Mam esse.
             </p>
+        </div>
+        <hr>
+        <div>
+            <h2>Zainteresowania</h2>
+            <ul>
+                <li>
+                    Lego Ninjago
+                </li>
+                <li>
+                    Anime
+                </li>
+                <li>
+                    Gry komputerowe
+                </li>
+            </ul>
+        </div>
+        <hr>
+        <div>
+            <h2>TOP 3 ulubionych filmów</h2>
+            <ol>
+                <li>
+                    Lego Ninjago Movie
+                </li>
+                <li>
+                    Eldorado
+                </li>
+                <li>
+                    Kung Fu Panda
+                </li>
+            </ol>
         </div>
         <hr>
     </main>
