--- a/galeria.html
+++ b/galeria.html
@@ -11,6 +11,7 @@
             <a href="index.html" class="nav-item">Strona główna</a>
             <a href="post.html" class="nav-item">Posty</a>
             <a href="comments.html" class="nav-item">Komentarze</a>
+            <a href="ranking.html" class="nav-item">Ranking</a>
         </div>
     </nav>
     <main class="container">
