--- a/ranking.html
+++ b/ranking.html
@@ -7,60 +7,69 @@
     <title>Spotkanie 1 - Strona Szymona</title>
 </head>
 <body>
-    <nav class="navigation">
-        <div class="container">
-            <a href="index.html" class="nav-item">Strona główna</a>
-            <a href="post.html" class="nav-item">Posty</a>
-            <a href="comments.html" class="nav-item">Komentarze</a>
-            <a href="galeria.html" class="nav-item">Galeria</a>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Strona kadeta</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Strona kadeta</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="comments.html">Komentarze</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="galeria.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="post.html">Posty</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <main class="container">
         <h1 class="title">Rankingi</h1>
-        <hr>
         <div>
-            <h2 class="subtitle">O mnie</h2>
-            <p>
-                Jestem Szymon mam 16 lat.
-            </p>
-            <p>
-                Chodzę do 2 klasy technikum programista.
-            </p>
-            <p>
-                Mam esse.
-            </p>
-        </div>
-        <hr>
-        <div>
-            <h2>Zainteresowania</h2>
-            <ul>
-                <li>
-                    Lego Ninjago
-                </li>
-                <li>
-                    Anime
-                </li>
-                <li>
-                    Gry komputerowe
-                </li>
-            </ul>
-        </div>
-        <hr>
-        <div>
-            <h2>TOP 3 ulubionych filmów</h2>
-            <ol>
-                <li>
-                    Lego Ninjago Movie
-                </li>
-                <li>
-                    Eldorado
-                </li>
-                <li>
-                    Kung Fu Panda
-                </li>
-            </ol>
-        </div>
-        <hr>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nr</th>
+                        <th>Tytuł</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Lego Ninjago: Film</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>The Last: Naruto the Movie</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Naruto Shippūden film: Więzi</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nr</th>
+                        <th>Tytuł</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Granie w komputer</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Oglądanie anime</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Loli paradise</td>
+                    </tr>
+                </tbody>
+            </table>
     </main>
     <footer class="footer">
         <div class="container">
