--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/styl.css">
     <meta charset="UTF-8">
     <title>Spotkanie 1 - Strona Szymona</title>
@@ -23,10 +24,10 @@
         </div>
     </nav>
     <main class="container">
-        <h1 class="title">Strona Szymona</h1>
+        <h1>Strona Szymona</h1>
         <hr>
         <div>
-            <h2 class="subtitle">O mnie</h2>
+            <h2>O mnie</h2>
             <p>
                 Jestem Szymon mam 16 lat.
             </p>
@@ -39,18 +40,24 @@
         </div>
         <hr>
     </main>
-    <footer class="footer">
+    <footer class="text-bg-secondary mt-3 p-3">
         <div class="container">
             <h2>Kontakt</h2>
-        <div class="half-column">
-            Opis
-            <p>Strona z kursu Web Master Studio.</p>
-        </div>
-        <div class="half-column">
-            Formy kontaktu
-            <p>Email:sktm@sktm.pl</p>
-        </div>
+            <div class="row">
+                <div class="col-6">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repellat ipsa delectus saepe, autem cum
+                        sit aspernatur repellendus blanditiis, sint quia consectetur, itaque iure ut expedita mollitia ipsum
+                        temporibus debitis.
+                    </p>
+                </div>
+                <div class="col-6">
+                    <p>Mail: przykladowy_mail@gmail.com</p>
+                    <p>Discord: Discord#1234</p>
+                </div>
+            </div>
         </div>
     </footer>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
