--- a/comments.html
+++ b/comments.html
@@ -17,6 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Strona główna</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Kontakty</a></li>
                     <li class="nav-item"><a class="nav-link active" href="galeria.html">Galeria</a></li>
                     <li class="nav-item"><a class="nav-link active" href="post.html">Posty</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ranking.html">Ranking</a></li>
