--- a/galeria.html
+++ b/galeria.html
@@ -17,6 +17,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Strona główna</a></li>
                     <li class="nav-item"><a class="nav-link active" href="comments.html">Komentarze</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Kontakty</a></li>
                     <li class="nav-item"><a class="nav-link active" href="post.html">Posty</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ranking.html">Ranking</a></li>
                 </ul>
